# gars

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
assets/: config.toml
crates/gars-archive/: Cargo.toml
crates/gars-archive/src/: lib.rs
crates/gars-cdp/: Cargo.toml
crates/gars-cdp/src/: lib.rs
crates/gars-cli/: Cargo.toml
crates/gars-connectors/: Cargo.toml
crates/gars-connectors/src/: common.rs  feishu.rs  lib.rs  registry.rs  telegram.rs
crates/gars-core/: Cargo.toml
crates/gars-core/src/: lib.rs  plan_mode.rs  protocol.rs  runtime.rs  subagent.rs  task_runner.rs  tool.rs
crates/gars-extension/: Cargo.toml
crates/gars-extension/src/: lib.rs
crates/gars-llm/: Cargo.toml
crates/gars-llm/src/: lib.rs
crates/gars-memory/: Cargo.toml
crates/gars-memory/src/: lib.rs
crates/gars-memory/tests/: config_sync.rs
crates/gars-osctl/: Cargo.toml
crates/gars-osctl/src/: adb.rs  input.rs  keychain.rs  lib.rs
crates/gars-server/: Cargo.toml  build.rs
crates/gars-server/assets/: ui.html
crates/gars-server/src/: goal_mode.rs  lib.rs  scheduler.rs  subagent_runner.rs
crates/gars-skills/: Cargo.toml
crates/gars-skills/assets/agents/: explorer.toml  reviewer.toml  verifier.toml
crates/gars-skills/assets/modes/builtin/: chat.toml  goal.toml  plan.toml  schedule.toml  subagent.toml  trigger.toml
crates/gars-skills/assets/sop/: adb_sop.md  autonomous_sop.md  code_review_principles.md  github_contribution_sop.md  goal_sop.md  input_sop.md  keychain_sop.md  plan_sop.md  scheduled_task_sop.md  skill_search_sop.md  subagent_sop.md  supervisor_sop.md  trigger_sop.md  verify_sop.md  vision_sop.md
crates/gars-skills/src/: agents.rs  assets.rs  lib.rs  market.rs  modes.rs  plan_scan.rs  remote.rs  search.rs  skill.rs
crates/gars-skills/tests/: market.rs  remote.rs
crates/gars-store/: Cargo.toml
crates/gars-store/src/: lib.rs
crates/gars-tools/: Cargo.toml
crates/gars-tools/src/: archive_tools.rs  lib.rs  osctl_tools.rs  plan_tools.rs  skill_tools.rs  subagent_tools.rs  vision_tools.rs
crates/gars-vision/: Cargo.toml
crates/gars-vision/src/: lib.rs
docs/: ARCHITECTURE.md
extension/: build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/: background.ts  popup.html  popup.ts
scripts/: install.sh
