[workspace]
members = [
    "crates/gars-core",
    "crates/gars-memory",
    "crates/gars-cdp",
    "crates/gars-llm",
    "crates/gars-tools",
    "crates/gars-store",
    "crates/gars-server",
    "crates/gars-cli",
    "crates/gars-skills",
    "crates/gars-connectors",
    "crates/gars-vision",
    "crates/gars-osctl",
    "crates/gars-archive",
    "crates/gars-extension",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = ["uoox"]
repository = "https://github.com/uoox/gars"
description = "GenericAgent-inspired Rust background service with local REST API"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["ws"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
cron = "0.15"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.0"
futures-util = "0.3.31"
hmac = "0.12"
quick-xml = "0.38"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "time", "fs", "io-util", "signal", "sync"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9.8"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
