[package]
name = "gars-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "L4 session compression and historical retrieval index for gars"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gars-memory = { path = "../gars-memory" }
gars-store = { path = "../gars-store" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
