[package]
name = "gars-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM providers and mixin failover for gars"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
gars-core = { path = "../gars-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
