[package]
name = "gars-osctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OS-level controls: ADB, keychain (XOR file), physical input"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
gars-memory = { path = "../gars-memory" }
quick-xml.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
