[package]
name = "gars-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local REST API service for gars"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
cron.workspace = true
futures-util.workspace = true
gars-archive = { path = "../gars-archive" }
gars-core = { path = "../gars-core" }
gars-cdp = { path = "../gars-cdp" }
gars-connectors = { path = "../gars-connectors" }
gars-extension = { path = "../gars-extension" }
gars-llm = { path = "../gars-llm" }
gars-memory = { path = "../gars-memory" }
gars-osctl = { path = "../gars-osctl" }
gars-skills = { path = "../gars-skills" }
gars-store = { path = "../gars-store" }
gars-tools = { path = "../gars-tools" }
gars-vision = { path = "../gars-vision" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
