[package]
name = "gars-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Vision API client and OCR utilities for gars"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
gars-core = { path = "../gars-core" }
gars-llm = { path = "../gars-llm" }
gars-memory = { path = "../gars-memory" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
